gst_ptp_init doesn't accept uint64 params.
Describe your issue
Expected Behavior
Assign my PTP Clock ID as a a parameter to gst_ptp_init
Observed Behavior
Received this error at runtime Have tried uint64_t variant, converting to hexadacimal, typecasting to guint64.
** (gst-ptp-helper:4093872): ERROR **: 18:15:21.014: Error parsing options: Integer value ?0xd0880c012a420008? for -c out of range
Setup
- Operating System: Linux 6.1.21-v8+ # 1642 SMP PREEMPT Mon Apr 3 17:24:16 BST 2023 aarch64 unknown unknown GNU/Linux
- Device: Computer
- GStreamer Version: Package: libgstreamer1.0-dev Version: 1.18.4-2.1 Priority: optional Section: libdevel Source: gstreamer1.0
- Command line: bash
Steps to reproduce the bug
guint64 my_ptp = 15026273355865128968;
if (!gst_ptp_init(my_ptp, NULL)) {
g_printerr("failed to initiate ptp clock in gstreamer\n");
goto exit;
}
or hexadecimal variant: 0xD04758D8C39CC850
How reproducible is the bug?
Always
Additional Information
Edited by Adam Woolhether